--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('D:/Goc Hoc Tap/web/baitap6/Drawing App JavaScript/index.html')"
+                onclick="showContent('bai7/Drawing App JavaScript/index.html')"
               >
                 <span class="material-symbols-rounded">brush</span>
                 <span class="menu-label">Drawing App</span>
@@ -67,7 +67,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('D:/Goc Hoc Tap/web/baitap6/Memory Cards Game [Demo 1]/Memory Cards Game [Demo 1]/index.html')"
+                onclick="showContent('bai7/Memory Cards Game [Demo 1]/Memory Cards Game [Demo 1]/index.html')"
               >
                 <span class="material-symbols-rounded">grid_view</span>
                 <span class="menu-label">Memory Game</span>
@@ -77,7 +77,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('D:/Goc Hoc Tap/web/baitap6/Hangman Game/Hangman Game/index.html')"
+                onclick="showContent('bai7/Hangman Game/Hangman Game/index.html')"
               >
                 <span class="material-symbols-rounded">grid_view</span>
                 <span class="menu-label">Hangman Game</span>
@@ -87,7 +87,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('D:/Goc Hoc Tap/web/baitap6/Playable PIANO in JavaScript/Playable PIANO in JavaScript/index.html')"
+                onclick="showContent('bai7/Playable PIANO in JavaScript/Playable PIANO in JavaScript/index.html')"
               >
                 <span class="material-symbols-rounded">grid_view</span>
                 <span class="menu-label">Piano</span>
@@ -97,7 +97,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('D:/Goc Hoc Tap/web/baitap6/Image Editor JavaScript/Image Editor JavaScript/index.html')"
+                onclick="showContent('bai7/Image Editor JavaScript/Image Editor JavaScript/index.html')"
               >
                 <span class="material-symbols-rounded">grid_view</span>
                 <span class="menu-label">Edit</span>
