--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <a
                 href="#"
                 class="menu-link"
-                onclick="showContent('bai7/Playable PIANO in JavaScript/Playable PIANO in JavaScript/index.html')"
+                onclick="showContent('Playable PIANO in JavaScript/Playable PIANO in JavaScript/index.html')"
               >
                 <span class="material-symbols-rounded">grid_view</span>
                 <span class="menu-label">Piano</span>
